Building out modules.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,5 @@
 add_subdirectory(Cobs)
 add_subdirectory(CheckCond)
 add_subdirectory(SwFifo)
+add_subdirectory(RtosUtils)
+add_subdirectory(WifiConnect)
