--- a/boards/espressif/esp32s3_matrix/esp32s3_matrix_procpu.dts
+++ b/boards/espressif/esp32s3_matrix/esp32s3_matrix_procpu.dts
@@ -2,6 +2,7 @@
 
 #include "espressif/esp32s3/esp32s3.dtsi"
 #include "esp32s3_matrix-pinctrl.dtsi"
+#include <zephyr/dt-bindings/input/input-event-codes.h>
 
 / {
 	model = "Espressif ESP32-S3-Matrix PROCPU";
