Added TcpSocket, TcpServer, TcpEcho, NvParms modules. Incorporated correct Kconfig dependencies for modules.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,3 +4,7 @@ add_subdirectory(SwFifo)
 add_subdirectory(SwTimer)
 add_subdirectory(RtosUtils)
 add_subdirectory(WifiConnect)
+add_subdirectory(TcpSocket)
+add_subdirectory(TcpServer)
+add_subdirectory(TcpEcho)
+add_subdirectory(NvParms)
