--- a/WifiConnect/CMakeLists.txt
+++ b/WifiConnect/CMakeLists.txt
@@ -1,7 +1,5 @@
 if (CONFIG_WIFICONNECT)
-    set(srcs "src/WifiConnect.c"
-             )
-
+    set(srcs "src/WifiConnect.c")
     zephyr_include_directories(include)
     zephyr_library_sources(${srcs})
 endif()
