Added CList, Random and WS2812Led modules.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,3 +8,6 @@ add_subdirectory(TcpSocket)
 add_subdirectory(TcpServer)
 add_subdirectory(TcpEcho)
 add_subdirectory(NvParms)
+add_subdirectory(Random)
+add_subdirectory(CList)
+add_subdirectory(WS2812Led)
