--- a/Kconfig
+++ b/Kconfig
@@ -4,3 +4,4 @@ rsource "TcpSocket/Kconfig"
 rsource "TcpServer/Kconfig"
 rsource "TcpEcho/Kconfig"
 rsource "NvParms/Kconfig"
+rsource "WS2812Led/Kconfig"
