--- a/boards/espressif/esp32s3_matrix/esp32s3_matrix_procpu.dts
+++ b/boards/espressif/esp32s3_matrix/esp32s3_matrix_procpu.dts
@@ -3,6 +3,7 @@
 #include "espressif/esp32s3/esp32s3.dtsi"
 #include "esp32s3_matrix-pinctrl.dtsi"
 #include <zephyr/dt-bindings/input/input-event-codes.h>
+#include <zephyr/dt-bindings/led/led.h>
 
 / {
 	model = "Espressif ESP32-S3-Matrix PROCPU";
@@ -25,6 +26,7 @@
 	aliases {
 		uart-0 = &uart0;
 		sw0 = &button0;
+		led-strip = &led_strip;
 	};
 
 	buttons {
@@ -40,6 +42,34 @@
 
 &usb_serial {
 	status = "okay";
+};
+
+&spi3 {
+	status = "okay";
+	#address-cells = <1>;
+	#size-cells = <0>;
+	pinctrl-0 = <&spim3_default>;
+	pinctrl-names = "default";
+
+	/* Workaround to support WS2812 driver */
+	line-idle-low;
+
+	led_strip: ws2812@0 {
+		compatible = "worldsemi,ws2812-spi";
+
+		/* SPI */
+		reg = <0>; /* ignored, but necessary for SPI bindings */
+		spi-max-frequency = <6400000>;
+
+		/* WS2812 */
+		chain-length = <64>; /* arbitrary; change at will */
+		spi-cpha;
+		spi-one-frame = <0xf0>; /* 11110000: 625 ns high and 625 ns low */
+		spi-zero-frame = <0xc0>; /* 11000000: 312.5 ns high and 937.5 ns low */
+		color-mapping = <LED_COLOR_ID_GREEN
+				 LED_COLOR_ID_RED
+				 LED_COLOR_ID_BLUE>;
+	};
 };
 
 &uart0 {
