Added PbGeneric and ProtoRpc modules. Not working yet.

--- a/Kconfig
+++ b/Kconfig
@@ -5,3 +5,5 @@ rsource "TcpServer/Kconfig"
 rsource "TcpEcho/Kconfig"
 rsource "NvParms/Kconfig"
 rsource "WS2812Led/Kconfig"
+rsource "PbGeneric/Kconfig"
+rsource "ProtoRpc/Kconfig"
