--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,3 +11,5 @@ add_subdirectory(NvParms)
 add_subdirectory(Random)
 add_subdirectory(CList)
 add_subdirectory(WS2812Led)
+add_subdirectory(PbGeneric)
+add_subdirectory(ProtoRpc)
