--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,3 +13,4 @@ add_subdirectory(CList)
 add_subdirectory(WS2812Led)
 add_subdirectory(PbGeneric)
 add_subdirectory(ProtoRpc)
+add_subdirectory(proto)
