Added modules and tools to support RPC.

--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -13,3 +13,5 @@ add_subdirectory(CList)
 add_subdirectory(WS2812Led)
 add_subdirectory(PbGeneric)
 add_subdirectory(ProtoRpc)
+add_subdirectory(TestRpc)
+add_subdirectory(TcpRpcServer)
