--- a/modules/Kconfig
+++ b/modules/Kconfig
@@ -7,3 +7,7 @@ rsource "NvParms/Kconfig"
 rsource "WS2812Led/Kconfig"
 rsource "PbGeneric/Kconfig"
 rsource "ProtoRpc/Kconfig"
+rsource "TestRpc/Kconfig"
+rsource "TcpRpcServer/Kconfig"
+rsource "Cobs/Kconfig"
+rsource "SwFifo/Kconfig"
