--- a/modules/SwFifo/CMakeLists.txt
+++ b/modules/SwFifo/CMakeLists.txt
@@ -1,2 +1,4 @@
-zephyr_include_directories(include)
-zephyr_library_sources("src/SwFifo.c")
+if (CONFIG_SWFIFO)
+    zephyr_include_directories(include)
+    zephyr_library_sources("src/SwFifo.c")
+endif()
