--- a/modules/ProtoRpc/Kconfig
+++ b/modules/ProtoRpc/Kconfig
@@ -1,7 +1,7 @@
 config PROTORPC
 	bool "Enable the ProtoRpc lib"
 	default n
-	select PBGENERIC
+	depends on PBGENERIC
 
 module = PROTORPC
 module-str = "ProtoRpc"
