Modified protorpc python tools. Added api generation to TestRpc as an example. Consolidated make scripts.

--- a/modules/TestRpc/CMakeLists.txt
+++ b/modules/TestRpc/CMakeLists.txt
@@ -1,19 +1,23 @@
 if (CONFIG_TESTRPC)
-    zephyr_include_directories(include)
-    zephyr_library_sources("src/TestRpc.c")
+    set(name TestRpc)
 
-    # Uncomment to build RPC handler template.
-    #add_custom_command(
-    #    COMMAND ${CMAKE_COMMAND} -E echo "[protorpc] Generating handler source template for ${name}."
-    #    COMMAND ${CMAKE_COMMAND} -E touch .protorpc
-    #    COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/protorpc_out.sh
-    #    VERBATIM
-    #    OUTPUT .protorpc
-    #    DEPENDS ${proto_file}
-    #    )
-    #
-    #add_custom_target(
-    #    ${name}_protorpc ALL
-    #    DEPENDS .protorpc
-    #    )
+    zephyr_include_directories(include)
+    zephyr_library_sources("src/${name}.c")
+
+    # Below adds a custom command for generating the handler C api.
+    set(proto_file $ENV{BASEDIR}/common/proto/${name}/${name}.proto)
+    set(handler_source_output build/${name}.c)
+
+    add_custom_command(
+        OUTPUT ${handler_source_output}
+        COMMAND ${CMAKE_COMMAND} -E echo "[protorpc] Generating handler source template for ${name}."
+        COMMAND make --no-print-directory -C ${CMAKE_CURRENT_SOURCE_DIR} HANDLER_SOURCE_OUT=${handler_source_output} PROTO_SOURCE_IN=${proto_file}
+        VERBATIM
+        DEPENDS ${proto_file}
+        )
+    
+    add_custom_target(
+        ${name}_protorpc_handler ALL
+        DEPENDS ${handler_source_output}
+        )
 endif()
