Muliple mods to WS2812Led module. Added Kconfig for Random module. Added semaphore support to RtosUtils.

--- a/modules/Kconfig
+++ b/modules/Kconfig
@@ -11,3 +11,4 @@ rsource "TestRpc/Kconfig"
 rsource "TcpRpcServer/Kconfig"
 rsource "Cobs/Kconfig"
 rsource "SwFifo/Kconfig"
+rsource "Random/Kconfig"
