Commit of working eth_serial driver.

--- a/drivers/net/eth_serial/Kconfig
+++ b/drivers/net/eth_serial/Kconfig
@@ -7,7 +7,8 @@ config ETH_SERIAL
 config ETH_SERIAL_COBS
 	bool
 	default y
-	depends on COBS
+	select COBS
+	select SWFIFO
 	help
 	  Use Consistent overhead byte stuffing for framing.
 
