--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -15,3 +15,4 @@ add_subdirectory(PbGeneric)
 add_subdirectory(ProtoRpc)
 add_subdirectory(TestRpc)
 add_subdirectory(TcpRpcServer)
+add_subdirectory(slip)
