Added new modules.

--- a/modules/Kconfig
+++ b/modules/Kconfig
@@ -1,8 +1,11 @@
 rsource "Cobs/Kconfig"
 rsource "WifiConnect/Kconfig"
+rsource "UdpSocket/Kconfig"
+rsource "UdpServer/Kconfig"
 rsource "TcpSocket/Kconfig"
 rsource "TcpServer/Kconfig"
 rsource "TcpEcho/Kconfig"
+rsource "EchoServer/Kconfig"
 rsource "NvParms/Kconfig"
 rsource "WS2812Led/Kconfig"
 rsource "PbGeneric/Kconfig"
@@ -13,3 +16,4 @@ rsource "Cobs/Kconfig"
 rsource "SwFifo/Kconfig"
 rsource "Random/Kconfig"
 rsource "slip/Kconfig"
+rsource "MqttClient/Kconfig"
