--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -4,9 +4,12 @@ add_subdirectory(SwFifo)
 add_subdirectory(SwTimer)
 add_subdirectory(RtosUtils)
 add_subdirectory(WifiConnect)
+add_subdirectory(UdpSocket)
+add_subdirectory(UdpServer)
 add_subdirectory(TcpSocket)
 add_subdirectory(TcpServer)
 add_subdirectory(TcpEcho)
+add_subdirectory(EchoServer)
 add_subdirectory(NvParms)
 add_subdirectory(Random)
 add_subdirectory(CList)
@@ -16,3 +19,4 @@ add_subdirectory(ProtoRpc)
 add_subdirectory(TestRpc)
 add_subdirectory(TcpRpcServer)
 add_subdirectory(slip)
+add_subdirectory(MqttClient)
