Removed protos since they moved to zephyr-proto repo. Fixed refrences to previous location to protos. Added SystemRpc module. So far it only supports dumping memory.

--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -20,3 +20,4 @@ add_subdirectory(TestRpc)
 add_subdirectory(TcpRpcServer)
 add_subdirectory(slip)
 add_subdirectory(MqttClient)
+add_subdirectory(SystemRpc)
