--- a/modules/Kconfig
+++ b/modules/Kconfig
@@ -17,3 +17,4 @@ rsource "SwFifo/Kconfig"
 rsource "Random/Kconfig"
 rsource "slip/Kconfig"
 rsource "MqttClient/Kconfig"
+rsource "SystemRpc/Kconfig"
