Added CircBuffer and TraceRam modules as a more usable trace ram backend.

--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -21,3 +21,5 @@ add_subdirectory(TcpRpcServer)
 add_subdirectory(slip)
 add_subdirectory(MqttClient)
 add_subdirectory(SystemRpc)
+add_subdirectory(CircBuffer)
+add_subdirectory(TraceRam)
