--- a/modules/Kconfig
+++ b/modules/Kconfig
@@ -18,3 +18,5 @@ rsource "Random/Kconfig"
 rsource "slip/Kconfig"
 rsource "MqttClient/Kconfig"
 rsource "SystemRpc/Kconfig"
+rsource "CircBuffer/Kconfig"
+rsource "TraceRam/Kconfig"
